# wingpanel-indicator-simple

./: README.md  SimpleIndicator.vala  meson.build
